Link index.html to giouvarlakia.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Tommy's recipes</h1>
+        <p>
+            <ul>
+                <a href="./pages/omnivore/giouvarlakia.html">Giouvarlakia</a>
+            </ul>
+        </p>
 </body>
 </html>
