Updated index.html, giouvarlakia.html
Updated content in both pages to greek. This project is made
for myself mainly.

giouvarlakia.html now contains a complete recipe and an image.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My recipes</title>
+    <title>Συνταγές</title>
 </head>
 <body>
-    <h1>Tommy's recipes</h1>
+    <h1>Οι συνταγές του Θωμά.</h1>
         <p>
             <ul>
-                <a href="./pages/omnivore/giouvarlakia.html">Giouvarlakia</a>
+                <a href="./pages/omnivore/giouvarlakia.html">Γιουβαρλάκια</a>
             </ul>
         </p>
 </body>
