--- a/pages/omnivore/giouvarlakia.html
+++ b/pages/omnivore/giouvarlakia.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giouvarlakia</title>
+    <title>Γιουβαρλάκια αυγολέμονο</title>
 </head>
 <body>
-    <h1>Giouvarlakia</h1>
+    <h1>Γιουβαρλάκια αυγολέμονο</h1>
+    
+    <img alt="Ένα πιάτο με γιουβαρλάκια αυγολέμονο."
+    src="../../images/giouvarlakia-avgolemono.jpg">
+
+    <h2>Συνταγή</h2>
+
+    <p>
+        Βάλε 1 κρεμμύδι, 2 σκελίδες σκόρδο, λίγο άνηθο στο μπλέντερ. 
+        Βάλε περίπου 600 γρ. κιμά σε ένα μεγάλο μπολ και ρίξε λίγο λάδι, 
+        1 αυγό, 1/2 κούπα ρύζι γλασσέ και τα περιεχόμενα του μπλέντερ. 
+        Πρόσθεσε 2 κ. σ. αλάτι και 1/2 κ. σ. πιπέρι και ανακάτεψε πολύ καλά με 
+        τα χέρια, φορώντας γάντια.
+    </p>
+
+    <p>
+        Βάλε σε μία πλατιά κατσαρόλα δύο δάχτυλα νερό και άναψε το μάτι σε 
+        μέτρια προς δυνατή ένταση. Πλάσε τα γιουβαρλάκια σε μέγεθος περίπου όσο 
+        όταν ενώσεις τον αντίχειρα με το δείκτη σου κάνοντας ένα Ο, ή λίγο 
+        μικρότερα. Τοποθέτησε τα γιουβαρλάκια ένα ένα στην κατσαρόλα ενώ τα 
+        πλάθεις, και στο τέλος πρόσθεσε νερό μέχρι να σκεπαστούν και λίγο παραπάνω.
+        Σκέπασε την κατσαρόλα και μόλις αρχίσει να βράζει το νερό, κατέβασε το 
+        μάτι στο μισό. Βράσε τα για περίπου 40 λεπτά, μέχρι να ανοίξει καλά το 
+        ρύζι.
+    </p>
+
+    <p>
+        Όταν είναι έτοιμα κλείσε το μάτι, κατέβασέ τα από το ζεστό μάτι με ανοιχτό 
+        καπάκι ώστε να πέσει λίγο η θερμοκρασία. Χτύπα καλά 2 αυγά σε ένα μπολ, ρίξε 
+        λίγο αλάτι και λίγο πιπέρι, και στύψε 2 λεμόνια στο μπολ με τα αβγά. 
+        Χτύπα το μίγμα μέχρι να γίνει ομοιογενές. Με την κουτάλα σερβιρίσματος, ρίξε 
+        μισή κουταλιά από τη σούπα στο αυγολέμονο και ανακάτεψε καλά. Επανέλαβε άλλες 
+        τρεις ή τέσσερις φορές. Ρίξε το αυγολέμονο στη σούπα και σύρε κυκλικά την κατσαρόλα
+        ώστε να απλωθεί το αυγολέμονο. Σέρβιρε με λίγο φρέσκο λάδι, λεμόνι και παξιμάδι ή 
+        ψωμί. Καλή απόλαυση!
+    </p>
 </body>
 </html>
