--- a/pages/omnivore/giouvarlakia.html
+++ b/pages/omnivore/giouvarlakia.html
@@ -9,10 +9,16 @@
 <body>
     <h1>Γιουβαρλάκια αυγολέμονο</h1>
     
+    <h2>Πλήρης συνταγή</h2>
+
+    <p>
+        <a href="https://akispetretzikis.com/recipe/5144/gioyvarlakia-avgolemono"></a>
+    </p>
+
     <img alt="Ένα πιάτο με γιουβαρλάκια αυγολέμονο."
     src="../../images/giouvarlakia-avgolemono.jpg">
 
-    <h2>Συνταγή</h2>
+    <h2>Γρήγορη συνταγή</h2>
 
     <p>
         Βάλε 1 κρεμμύδι, 2 σκελίδες σκόρδο, λίγο άνηθο στο μπλέντερ. 
@@ -43,5 +49,11 @@
         ώστε να απλωθεί το αυγολέμονο. Σέρβιρε με λίγο φρέσκο λάδι, λεμόνι και παξιμάδι ή 
         ψωμί. Καλή απόλαυση!
     </p>
+
+    <footer>
+        <p>
+            <a href="../../index.html">Αρχική</a>
+        </p>
+    </footer>
 </body>
 </html>
