--- a/pages/omnivore/giouvarlakia.html
+++ b/pages/omnivore/giouvarlakia.html
@@ -12,17 +12,37 @@
     <h2>Πλήρης συνταγή</h2>
 
     <p>
-        <a href="https://akispetretzikis.com/recipe/5144/gioyvarlakia-avgolemono"></a>
+        <a href="https://akispetretzikis.com/recipe/5144/gioyvarlakia-avgolemono" 
+        target="_blank">Γιουβαρλάκια αυγολέμονο - Άκης</a>
     </p>
 
     <img alt="Ένα πιάτο με γιουβαρλάκια αυγολέμονο."
-    src="../../images/giouvarlakia-avgolemono.jpg">
+    src="../../images/giouvarlakia-avgolemono.jpg" 
+    width="450" height="250">
 
     <h2>Γρήγορη συνταγή</h2>
 
+    <h3>Υλικά</h3>
+
+    <ul>
+        <li>1 κρεμμύδι</li>
+        <li>2 σκελίδες σκόρδο</li>
+        <li>1/2 ματσάκι άνηθο</li>
+        <li>600-700 γρ. κιμά</li>
+        <li>3 αυγά</li>
+        <li>~100 γρ. λάδι</li>
+        <li>~250 γρ. ρύζι γλασσέ</li>
+        <li>3 λεμόνια</li>
+        <li>Αλάτι</li>
+        <li>Πιπέρι</li>
+        <li>Ψωμί ή παξιμάδι</li>
+    </ul>
+
+    <h3>Εκτέλεση</h3>
+
     <p>
-        Βάλε 1 κρεμμύδι, 2 σκελίδες σκόρδο, λίγο άνηθο στο μπλέντερ. 
-        Βάλε περίπου 600 γρ. κιμά σε ένα μεγάλο μπολ και ρίξε λίγο λάδι, 
+        Βάλε το κρεμμύδι, το σκόρδο, τον άνηθο στο μπλέντερ. 
+        Βάλε τον κιμά σε ένα μεγάλο μπολ και ρίξε λίγο λάδι, 
         1 αυγό, 1/2 κούπα ρύζι γλασσέ και τα περιεχόμενα του μπλέντερ. 
         Πρόσθεσε 2 κ. σ. αλάτι και 1/2 κ. σ. πιπέρι και ανακάτεψε πολύ καλά με 
         τα χέρια, φορώντας γάντια.
