Link spanakorizo.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 </head>
 <body>
     <h1>Οι συνταγές του Θωμά.</h1>
+        <h2>Σύνδεσμοι:</h2>
         <p>
             <ul>
-                <a href="./pages/omnivore/giouvarlakia.html">Γιουβαρλάκια</a>
+                <li>
+                    <a href="./pages/omnivore/giouvarlakia.html">Γιουβαρλάκια</a>
+                </li>
+                
+                <li>
+                    <a href="./pages/vegan/spanakorizo.html">Σπανακόρυζο</a>
+                </li>
             </ul>
         </p>
 </body>
